[gd_scene load_steps=18 format=2]

[ext_resource path="res://AbsolutionLeft.gd" type="Script" id=1]
[ext_resource path="res://ADMovement.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/characters/here_man.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/LongText.gd" type="Script" id=5]
[ext_resource path="res://assets/lights.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Scene 1 H - Work/puerta.png" type="Texture" id=7]
[ext_resource path="res://assets/hall wall.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 8.66861 )

[sub_resource type="Theme" id=2]

_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=3]

size = 65
use_mipmaps = false
use_filter = false
extra_spacing_char = 5
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 32.25 )

[sub_resource type="Animation" id=5]

length = 10.0
loop = true
step = 0.1

[sub_resource type="Animation" id=6]

resource_name = "Fade In"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FadeBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 6.14746, 10 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="root" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
change_song = false
next_song = 1
next_scene = "res://Credits.tscn"
poem_container_path = "KinematicBody2D/textbox/Container/Background/poem"

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 97.7169, 211.426 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
can_move = true
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]

position = Vector2( 191.889, 364.921 )
scale = Vector2( 1.17722, 1.81462 )
shape = SubResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprite" type="Sprite" parent="KinematicBody2D/CollisionShape2D" index="0"]

position = Vector2( 3.552, -20.2686 )
scale = Vector2( 0.498231, 0.302953 )
z_index = 21
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="textbox" type="Container" parent="KinematicBody2D" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.2831
margin_top = 372.574
margin_right = 1071.28
margin_bottom = 510.574
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
_sections_unfolded = [ "Anchor", "Focus", "Material", "Mouse", "Pause", "Size Flags", "Theme" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Container" type="Container" parent="KinematicBody2D/textbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 7.0
margin_right = 1048.0
margin_bottom = 127.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Panel" parent="KinematicBody2D/textbox/Container" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -519.5
margin_top = -60.0
margin_right = 519.5
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]
__meta__ = {
"_edit_group_": true
}

[node name="poem" type="RichTextLabel" parent="KinematicBody2D/textbox/Container/Background" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.5
margin_top = -60.0
margin_right = 512.5
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "awefwaefwafawefwef"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "awefwaefwafawefwef"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 5 )
_sections_unfolded = [ "BBCode", "Size Flags", "Theme", "Visibility", "custom_constants", "custom_fonts" ]
lineWaitTime = 0.5
charWaitTime = 0.05
vibrateWaitTime = 0.001
longText = "i am not reaching out in the dark
\\\\cfor today i have conquered the mountain
\\\\cand even though it felt like a monster at first
\\\\csometimes a little push is all you need
\\\\cand the fresh air\\nand the breeze around you
\\\\ccan make you forget a bad day
\\\\cor week or year
\\\\ceven if just for a moment
\\\\cbecause there is nothing more fulfilling
\\\\cthan allowing yourself to find your clear sky
\\\\cand see the bright stars"
start = false
startOnFirstLine = false
vibrate = false
done = false
vibrateMax = 20

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D" index="2"]

position = Vector2( -95.6669, -211.474 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 1000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="Left Wall" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 67.6282, 358.374 )
scale = Vector2( -2.09213, 11.158 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Pickable", "Z Index" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall" index="0"]

position = Vector2( -5.5, 0 )
scale = Vector2( 1.42308, 1 )
z_index = -1
shape = SubResource( 4 )
_sections_unfolded = [ "Z Index" ]

[node name="Left Wall2" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 9022.31, 565.724 )
scale = Vector2( -2.09213, 11.158 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Pickable", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall2" index="0"]

position = Vector2( -5.5, 0 )
scale = Vector2( 1.42308, 1 )
z_index = -1
shape = SubResource( 4 )
_sections_unfolded = [ "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "clouds"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/clouds = SubResource( 5 )
blend_times = [  ]

[node name="FadeControl" type="Container" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -206.0
margin_top = -170.0
margin_right = 1808.0
margin_bottom = 1120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeControl" index="0"]

root_node = NodePath("..")
autoplay = "Fade In"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Fade In" = SubResource( 6 )
blend_times = [  ]

[node name="FadeBackground" type="Panel" parent="FadeControl" index="1"]

modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -117.0
margin_top = -549.0
margin_right = 2339.0
margin_bottom = 1246.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Container" type="Container" parent="." index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4564.89
margin_top = 522.986
margin_right = 4604.89
margin_bottom = 562.986
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Sprite" type="Sprite" parent="Container" index="0"]

position = Vector2( -4038.36, 9.45111 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Container/Sprite" index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite/Area2D" index="0"]

position = Vector2( 0, -0.755866 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite2" type="Sprite" parent="Container" index="1"]

position = Vector2( -3061.64, 6.36017 )
z_index = 23
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="Area2D2" type="Area2D" parent="Container/Sprite2" index="0"]

editor/display_folded = true
position = Vector2( 1.39526, -3.06073 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite2/Area2D2" index="0"]

position = Vector2( 0, -0.755866 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite3" type="Sprite" parent="Container" index="2"]

position = Vector2( -1769.65, 9.45105 )
texture = ExtResource( 6 )

[node name="Area2D3" type="Area2D" parent="Container/Sprite3" index="0"]

editor/display_folded = true
position = Vector2( -1290.6, -6.15161 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite3/Area2D3" index="0"]

position = Vector2( 1291.15, -7.60547 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite4" type="Sprite" parent="Container" index="3"]

position = Vector2( -443.66, 6.36017 )
z_index = 26
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="Area2D4" type="Area2D" parent="Container/Sprite4" index="0"]

editor/display_folded = true
position = Vector2( -2616.59, -3.06073 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite4/Area2D4" index="0"]

position = Vector2( 2613.13, -7.60547 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite5" type="Sprite" parent="Container" index="4"]

position = Vector2( 789.604, 9.45105 )
texture = ExtResource( 6 )

[node name="Area2D5" type="Area2D" parent="Container/Sprite5" index="0"]

position = Vector2( -3849.85, -6.15161 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite5/Area2D5" index="0"]

position = Vector2( 3855.66, -1.42371 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite6" type="Sprite" parent="Container" index="5"]

position = Vector2( 2251.59, 6.36011 )
z_index = 29
texture = ExtResource( 6 )
_sections_unfolded = [ "Z Index" ]

[node name="Area2D6" type="Area2D" parent="Container/Sprite6" index="0"]

position = Vector2( -5311.84, -3.06067 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite6/Area2D6" index="0"]

position = Vector2( 5308.38, -1.42371 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="Sprite7" type="Sprite" parent="Container" index="6"]

position = Vector2( 3642.3, 5.3407 )
texture = ExtResource( 6 )

[node name="Area2D7" type="Area2D" parent="Container/Sprite7" index="0"]

position = Vector2( -5314.74, -5.13214 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Sprite7/Area2D7" index="0"]

position = Vector2( 5308.38, -1.42371 )
scale = Vector2( 1, 5.73616 )
shape = SubResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="Container" index="7"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="Container/StaticBody2D" index="0"]

position = Vector2( 4425.61, 0.739271 )
scale = Vector2( 4.55278, 4.55278 )
z_index = 3
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="Area2D" type="Area2D" parent="Container/StaticBody2D" index="1"]

position = Vector2( 4104.3, 101.785 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/StaticBody2D/Area2D" index="0"]

position = Vector2( 66.1167, 1.17319 )
scale = Vector2( 2.00219, 6.17149 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/StaticBody2D" index="2"]

position = Vector2( 4428.28, -5.55435 )
scale = Vector2( 1, 5.71664 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="." index="6"]

position = Vector2( 4567.17, 525.258 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 10000, 128 )
region_filter_clip = true
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[connection signal="body_entered" from="Container/Sprite/Area2D" to="." method="first_area"]

[connection signal="body_entered" from="Container/Sprite2/Area2D2" to="." method="second_area"]

[connection signal="body_entered" from="Container/Sprite3/Area2D3" to="." method="third_area"]

[connection signal="body_entered" from="Container/Sprite4/Area2D4" to="." method="fourth_area"]

[connection signal="body_entered" from="Container/Sprite5/Area2D5" to="." method="fifth_area"]

[connection signal="body_entered" from="Container/Sprite6/Area2D6" to="." method="sixth_area"]

[connection signal="body_entered" from="Container/Sprite7/Area2D7" to="." method="he_creado_siete_putas_funciones_iguales___como_crees_que_se_llama_esta"]

[connection signal="body_entered" from="Container/StaticBody2D/Area2D" to="." method="_on_try_to_leave"]


